--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1640,16 +1640,76 @@ body {
 
 .logo-text {
   font-size: 20px;
-  /* Adjust font size as needed */
   font-weight: bold;
-  /* Make the text bold */
   color: #3c3c3c;
-  /* Adjust text color for better readability */
   font-family: 'Arial', sans-serif;
-  /* Choose a suitable font family */
 }
 
 .logo:hover .logo-text {
   color: #1AB79D;
-  /* Change text color on hover */
+}
+
+.whatsapp-icon {
+  position: fixed;
+  bottom: 40px;
+  left: 40px;
+  z-index: 1000;
+  animation: bounce 2.5s infinite;
+}
+
+.whatsapp-icon img {
+  width: 75px;
+  height: 75px;
+}
+
+.whatsapp-icon img:hover {
+  opacity: 0.8;
+}
+
+.formcontainer {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #f6f6f6;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+#inquiry-form {
+  display: flex;
+  flex-direction: column;
+}
+
+#inquiry-form div {
+  margin-bottom: 15px;
+}
+
+.formlabel {
+  margin-bottom: 5px;
+  font-weight: bold;
+  color: #1AB79D;
+}
+
+.formfields {
+  width: 100%;
+  padding: 3px;
+  margin-top: 5px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
+
+select {
+  padding: 10px;
+}
+
+.formBtn {
+  background-color: #007BFF;
+  color: white;
+  border: none;
+  cursor: pointer;
+  border-radius: 8px;
+}
+
+.formBtn:hover {
+  background-color: #0056b3;
 }
